feat: new argus configs

--- a/argus-configs.toml
+++ b/argus-configs.toml
@@ -1,1 +1,5 @@
-workflowWithTests = ['.*test.*']
+# array of regular expression strings to match workflow names
+# which should be watched by bot
+workflowWithTests = [
+  '.*test.*', # all workflows with sub-string "test" in their names will be watched by bot
+]
