feat: argus configs

--- a/argus-configs.toml
+++ b/argus-configs.toml
@@ -1,5 +1,13 @@
 # array of regular expression strings to match workflow names
 # which should be watched by bot
 workflowWithTests = [
-  '.*cypress.*', # all workflows with sub-string "cypress" in their names will be watched by bot
+  '.*test.*', # all workflows with sub-string "test" in their names will be watched by bot
 ]
+
+# array of regular expression strings to match images inside artifacts (by their path or file name)
+# which shows diffence between two screenshot and which will be added to bot report comment
+screenshotsDiffsPaths = [
+  '.*__diff_output__.*', # it is default cypress folder name into which snapshot diffs are put
+]
+
+# More configurable params will be added soon (if necessary)
