feat: temp commit artifacts

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,10 +19,10 @@ jobs:
           start: npm run serve
           command: npm run test
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v1
-        if: failure()
-        with:
-          name: cypress-screenshots
-          path: tests/cypress/snapshots
-          retention-days: 7
+#      - name: Upload artifact
+#        uses: actions/upload-artifact@v1
+#        if: failure()
+#        with:
+#          name: cypress-screenshots
+#          path: tests/cypress/snapshots
+#          retention-days: 7
