--- a/argus-configs.toml
+++ b/argus-configs.toml
@@ -10,4 +10,6 @@ screenshotsDiffsPaths = [
   '.*__diff_output__.*', # it is default cypress folder name into which snapshot diffs are put
 ]
 
+newScreenshotMark = '.*__new__.*'
+
 # More configurable params will be added soon (if necessary)
