--- a/.github/bot-configs.toml
+++ b/.github/bot-configs.toml
@@ -10,4 +10,4 @@ screenshotsDiffsPaths = [
   '.*__diff_output__.*', # it is default cypress folder name into which snapshot diffs are put
 ]
 
-branchesIgnore = ["^release/.*"]
+branchesIgnore = ["^test-configs"]
