--- a/.github/screenshot-bot.config.toml
+++ b/.github/screenshot-bot.config.toml
@@ -10,4 +10,4 @@ screenshotsDiffsPaths = [
   '.*__diff_output__.*', # it is default cypress folder name into which snapshot diffs are put
 ]
 
-branchesIgnore = ["^test-configs"]
+branchesIgnore = ["^release/.*"]
